Fix Bottom Overflow

--- a/flask_react/frontend/src/app.css
+++ b/flask_react/frontend/src/app.css
@@ -1,4 +1,4 @@
-body{
+body, html, #root {
   padding: 0px;
   margin: 0 !important ;
   background-color: aliceblue;
@@ -6,7 +6,9 @@ body{
   /* background-image: url('./resources/images/'); */
   background-size: 100% 100%;
   background-color: white;
+  height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 /* svg {
